feat: sonarr integration for future series & check connections for arr
