# server/src/main/java/com/rattatarr/rattatarr/models/JobType.java
@@ -4,5 +4,6 @@ public enum JobType {
     JELLYFIN_SYNC,
     CSV_IMPORT,
     RADARR_IMPORT,
-    RADARR_RATINGS_REFRESH
+    RADARR_RATINGS_REFRESH,
+    SONARR_IMPORT
 }
